--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello world. creating a new website, the old fashioned way ;)
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta content="ja" http-equiv="Content-Language">
+
+<link href="./css/index.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+.auto-style1 {
+	text-align: center;
+}
+</style>
+</head>
+
+<body>
+<div id="menu-box">
+<ul>
+<li><a href="./index.html">Home</a></li>
+<li><a href="./Bio.html">Bio</a></li>
+<li><a href="./Publications.html">Publications</a></li>
+<li><a href="./Research.html">Research</a></li>
+<li><a href="./Activities.html">Activities</a></li>
+<li><a href="./Others.html">Others</a></li>
+</ul>
+</div>
+<div class="space">&nbsp;</div>
+
+<div id="body-box" class="auto-style1">
+	<table class="textStyle" style="width: 100%">
+		<tbody><tr><br>
+			<td style="height: 16px"><span class="headerStyle1">Sudipta Sinha<br>
+			</span><span class="headerStyle2">
+			<a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft Research</a>,
+			Redmond, USA<br><br>
+			</span>
+			<a href="resume/snsinhaCV.pdf"><font size = 4> [CV]</font></a><br>
+			<span class="headerStyle2">
+			Research Interests:<br>Computer Vision, Robotics, Augmented Reality
+			<br><br>
+			</span>
+			
+			<span class="textStyle">Email: sudipta.sinha [at] microsoft.com</span></td>
+			<td class="auto-style1" style="height: 12px">
+			<img alt="Sudipta Sinha" width="128" src="./img/sudipta-sinha3.jpg" style="float: center"></td>
+		</tr>
+		</tbody></table>
+</div>
+
+<div id="footer-box">
+<hr>
+Last updated: April 19, 2018
+</div>
+
+</body></html>
