tweaked main page

--- a/index.html
+++ b/index.html
@@ -28,19 +28,29 @@
 		<tbody><tr><br>
 			<td style="height: 16px"><span class="headerStyle1">Sudipta Sinha<br>
 			</span><span class="headerStyle2">
-			<a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft Research</a>,
-			Redmond, USA<br><br>
+			Microsoft Research,<br>Redmond, USA<br><br>
 			</span>
-			<a href="resume/snsinhaCV.pdf"><font size = 4> [CV]</font></a><br>
+			
 			<span class="headerStyle2">
-			Research Interests:<br>Computer Vision, Robotics, Augmented Reality
+			Research Interests:<br>Computer Vision, Robotics,<br>Computer Graphics, Augmented Reality
 			<br><br>
 			</span>
 			
-			<span class="textStyle">Email: sudipta.sinha [at] microsoft.com</span></td>
-			<td class="auto-style1" style="height: 12px">
-			<img alt="Sudipta Sinha" width="128" src="./img/sudipta-sinha3.jpg" style="float: center"></td>
-		</tr>
+			<td class="auto-style1">
+			<img alt="Sudipta Sinha" width="128" src="./img/sudipta-sinha3.jpg"></td>
+			</tr>
+			
+			<tr>
+			<td>
+			<span class="textStyle"><a href="resume/snsinhaCV.pdf">CV</a></span><br>
+			<span class="textStyle"><a href="http://dblp.uni-trier.de/pers/hd/s/Sinha:Sudipta_N=">DBLP</a></span><br>
+			<span class="textStyle"><a href="https://www.linkedin.com/in/sudipsin">LinkedIn</a></span><br>
+			<span class="textStyle"><a href="https://scholar.google.com/citations?user=Z6gnDIEAAAAJ&hl=en&oi=ao">Google Scholar</a></span><br>
+			<span class="textStyle"><a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft Research page</a></span><br>
+			<span class="textStyle">Email: sudipta-dot-sinha-at-microsoft-dot-com</span><br>			
+			</td>
+			<td></td>
+			</tr>
 		</tbody></table>
 </div>
 
@@ -50,3 +60,9 @@ Last updated: April 19, 2018
 </div>
 
 </body></html>
+
+<!-- 
+
+			<td class="auto-style1" style="height: 12px">
+
+style="float:top" -->
