--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<span class="textStyle"><a href="https://www.linkedin.com/in/sudipsin">LinkedIn</a></span><br>
 			<span class="textStyle"><a href="https://scholar.google.com/citations?user=Z6gnDIEAAAAJ&hl=en&oi=ao">Google Scholar</a></span><br>
 			<span class="textStyle"><a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft Research page</a></span><br>
-			<span class="textStyle">Email: sudipta-dot-sinha-at-microsoft-dot-com</span><br>			
+			<span class="textStyle">Email: sudipta-dot-sinha-at-microsoft.com</span><br>			
 			</td>
 			<td></td>
 			</tr>
