fixed broken links

--- a/Publications.html
+++ b/Publications.html
@@ -62,7 +62,7 @@ Bugra Tekin, Sudipta N. Sinha and Pascal Fua<br>
 Semi-Global Stereo Matching with Surface Orientation Priors
 [<a href="pdfs/Scharstein3DV2017.pdf">pdf</a>] </p>
 Daniel Scharstein, Tatsunori Taniai and Sudipta N. Sinha<br>
-<a href="3dv18.uniud.it/">3DV</a>, 2017.<br>
+<a href="http://3dv18.uniud.it/">3DV</a>, 2017.<br>
 <p></p>
 
 <p class="paperheading">
@@ -76,7 +76,7 @@ Ganesh Ananthanarayanan, Victor Bahl, Peter Bodík, Krishna Chintalapudi, Mattha
 Submodular Trajectory Optimization for Aerial 3D Scanning
 [<a href="pdfs/RobertsICCV2017.pdf">pdf</a>] </p>
 Mike Roberts, Debadeepta Dey, Anh Truong, Sudipta N. Sinha, Shital Shah, Ashish Kapoor,<br> Pat Hanrahan and Neel Joshi <br>
-<a href="iccv2017.thecvf.com/">ICCV</a>, 2017.<br>
+<a href="http://iccv2017.thecvf.com/">ICCV</a>, 2017.<br>
 <p></p>
 
 <p class="paperheading">
@@ -90,14 +90,14 @@ Deepak Vasisht, Zerina Kapetanovic, JongHo Won, Xinxin Jin, Ranveer Chandra,<br>
 Fast Multi-frame Stereo Scene Flow with Motion Segmentation 
 [<a href="pdfs/TaniaiCVPR2017.pdf">pdf</a>] </p>
 Tatsunori Taniai, Sudipta Sinha and Yoichi Sato<br>
-<a href="cvpr2017.thecvf.com/">CVPR</a> 2017.<br>
+<a href="http://cvpr2017.thecvf.com/">CVPR</a> 2017.<br>
 <p></p>
 
 <p class="paperheading">
 Flight Dynamics-based Recovery of a UAV Trajectory using Ground Cameras 
 [<a href="pdfs/RozantsevCVPR2017.pdf">pdf</a>] </p>
 Artem Rozantsev, Sudipta Sinha, Debadeepta Dey and Pascal Fua <br>
-<a href="cvpr2017.thecvf.com/">CVPR</a> 2017.<br>
+<a href="http://cvpr2017.thecvf.com/">CVPR</a> 2017.<br>
 <p></p>
 
 <p class="paperheading">
@@ -122,13 +122,13 @@ Jaesik Park, Sudipta Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
 Efficient and Robust Color Consistency for Community Photo Collections 
 [<a href="pdfs/ParkCVPR2016.pdf">pdf</a>]</p>
 Jaesik Park, Yu-Wing Tai, Sudipta Sinha and In So Kweon<br>
-<a href="cvpr2016.thecvf.com">CVPR</a> 2016.<p></p>
+<a href="http://cvpr2016.thecvf.com">CVPR</a> 2016.<p></p>
 
 <p class="paperheading">
 Joint Recovery of Dense Correspondence and Cosegmentation in Two Images 
 [<a href="pdfs/TaniaiCVPR2016.pdf">pdf</a>]</p>
 Tatsunori Taniai, Sudipta Sinha and Yoichi Sato<br>
-<a href="cvpr2016.thecvf.com">CVPR</a> 2016.<p></p>
+<a href="http://cvpr2016.thecvf.com">CVPR</a> 2016.<p></p>
 
 
 <!-- ---------------------------------------------------------- -->
@@ -138,13 +138,13 @@ Tatsunori Taniai, Sudipta Sinha and Yoichi Sato<br>
 Monocular Localization of a moving person onboard a Quadrotor MAV 
 [<a href="pdfs/LimSinhaICRA2015.pdf">pdf</a>]</p>
 Hyon Lim and Sudipta Sinha<br>
-<a href="http://cvpr2012.org/">ICRA</a> (IEEE International Conference on Robotics and Automation), 2015. <p></p>
+<a href="http://www.icra2015.org/">ICRA</a> (IEEE International Conference on Robotics and Automation), 2015. <p></p>
 
 <p class="paperheading">
 Real-time monocular image-based 6-DoF localization 
 [<a href="pdfs/LimIJRR2015.pdf">pdf</a>]</p>
 Hyon Lim, Sudipta Sinha, Michael Cohen, Matt Uyttendaele and H. Jin Kim<br>
-<a href="www.ijrr.org/">IJRR</a> (International Journal of Robotics Research), 2015. <p></p>
+<a href="http://www.ijrr.org/">IJRR</a> (International Journal of Robotics Research), 2015. <p></p>
 
 
 <!-- ---------------------------------------------------------- -->
@@ -154,26 +154,26 @@ Hyon Lim, Sudipta Sinha, Michael Cohen, Matt Uyttendaele and H. Jin Kim<br>
 Efficient High-Resolution Stereo Matching using Local Plane Sweeps 
 [<a href="pdfs/SinhaCVPR2014.pdf">pdf</a>]</p>
 Sudipta Sinha, Daniel Scharstein and Richard Szeliski<br>
-<a href="cvpr2014.thecvf.com">CVPR</a>, 2014.<p></p>
+<a href="http://cvpr2014.thecvf.com">CVPR</a>, 2014.<p></p>
 
 <p class="paperheading">
 Calibrating a Non-isotropic Near Point Light Source using a Plane
 [<a href="pdfs/ParkCVPR2014.pdf">pdf</a>]</p>
 Jaesik Park, Sudipta Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
-<a href="cvpr2014.thecvf.com">CVPR</a>, 2014.<p></p>
+<a href="http://cvpr2014.thecvf.com">CVPR</a>, 2014.<p></p>
 
 <p class="paperheading">
 Car Make and Model Recognition using 3D Curve Alignment
 [<a href="pdfs/RamnathWACV2014a.pdf">pdf</a>]</p>
 Krishnan Ramnath, Sudipta Sinha, Rick Szeliski and Ed Hsiao<br>
-<a href="wacv14.wacv.net/">WACV</a> (IEEE Winter Conference on Applications of Computer Vision), 2014.<p></p>
+<a href="http://wacv14.wacv.net/">WACV</a> (IEEE Winter Conference on Applications of Computer Vision), 2014.<p></p>
 
 <p class="paperheading">
 AutoCaption: Automatic Caption Generation for Personal Photos
 [<a href="pdfs/RamnathWACV2014b.pdf">pdf</a>]</p>
 Krishnan Ramnath, Simon Baker, Lucy Vanderwende, Motaz El-Saban, Sudipta Sinha,<br>
 Anitha Kannan, Michel Galley, Noran Hasan, Michel Galley, Yi Yang, Deva Ramanan, <br>Alessandro Bergamo and Lorrenzo Torresani<br>
-<a href="wacv14.wacv.net/">WACV</a> (IEEE Winter Conference on Applications of Computer Vision), 2014.<p></p>
+<a href="http://wacv14.wacv.net/">WACV</a> (IEEE Winter Conference on Applications of Computer Vision), 2014.<p></p>
 
 
 
@@ -202,25 +202,25 @@ Alessandro Bergamo, Sudipta Sinha and Lorrenzo Torresani<br>
 Detecting and Reconstructing 3D Mirror Symmetric Objects
 [<a href="pdfs/SinhaECCV2012.pdf">pdf</a>]</p>
 Sudipta Sinha, Krishnan Ramnath and Rick Szeliski<br>
-<a href="eccv2012.unifi.it/">ECCV</a>, 2012. <p></p>
+<a href="http://eccv2012.unifi.it/">ECCV</a>, 2012. <p></p>
 
 <p class="paperheading">
 Multiple View Object Cosegmentation using Appearance and Stereo Cues
 [<a href="pdfs/KowdleECCV2012.pdf">pdf</a>]</p>
 Adarsh Kowdle, Sudipta Sinha and Rick Szeliski<br>
-<a href="eccv2012.unifi.it/">ECCV</a>, 2012. <p></p>
+<a href="http://eccv2012.unifi.it/">ECCV</a>, 2012. <p></p>
 
 <p class="paperheading">
 A Memory Efficient Discriminative Approach for Location Aided Recognition
 [<a href="pdfs/KowdleECCV2012.pdf">pdf</a>]</p>
 Varsha Hedau, Sudipta Sinha, C. Lawrence Zitnick and Richard Szeliski<br>
-<a href="eccv2012.unifi.it/">ECCV workshop</a>, Workshop on Visual Analysis and Geo-Localization of Large-Scale Imagery 2012. <p></p>
+<a href="http://eccv2012.unifi.it/">ECCV workshop</a>, Workshop on Visual Analysis and Geo-Localization of Large-Scale Imagery 2012. <p></p>
 
 <p class="paperheading">
 Image-Based Rendering for Scenes with Reflections
 [<a href="pdfs/SinhaSIG2012.pdf">pdf</a>]</p>
 Sudipta Sinha, Johannes Kopf, Michael Goesele, Daniel Scharstein and Rick Szeliski<br>
-<a href="s2012.siggraph.org/">SIGGRAPH</a>, 2012<p></p>
+<a href="http://s2012.siggraph.org/">SIGGRAPH</a>, 2012<p></p>
 
 <p class="paperheading">
 Discovering and exploiting 3D symmetries in structure from motion
@@ -249,14 +249,14 @@ Hyon Lim and Sudipta Sinha<br>
 Object stereo — Joint stereo matching and object segmentation 
 [<a href="pdfs/BleyerCVPR2011.pdf">pdf</a>]</p>
 Michael Bleyer, Carsten Rother, Pushmeet Kohli, Daniel Scharstein and Sudipta Sinha<br>
-<a href="www.cvpapers.com/cvpr2011.html">CVPR</a>, 2011.<p></p>
+<a href="http://www.cvpapers.com/cvpr2011.html">CVPR</a>, 2011.<p></p>
 
 
 <p class="paperheading">
 Structure from motion for scenes with large duplicate structures 
 [<a href="pdfs/RobertsCVPR2011.pdf">pdf</a>]</p>
 Richard Roberts, Sudipta Sinha, Drew Steedly and Rick Szeliski<br>
-<a href="www.cvpapers.com/cvpr2011.html">CVPR</a>, 2011.<p></p>
+<a href="http://www.cvpapers.com/cvpr2011.html">CVPR</a>, 2011.<p></p>
 
 <p class="paperheading">
 Feature tracking and matching in video using programmable graphics hardware 
@@ -273,7 +273,7 @@ Sudipta Sinha, Jan-Michael Frahm, Marc Pollefeys and Yakup Genc<br>
 Image-based Walkthroughs from Incremental and Partial Scene Reconstruction
 [<a href="pdfs/SrijanBMVC2010.pdf">pdf</a>]</p>
 Kumar Srijan, Syed Ahsan Ishtiaque, Sudipta Sinha and C.V.Jawahar<br>
-<a href="www.bmva.org/bmvc/2010/">BMVC</a> 2010.<p></p>
+<a href="http://www.bmva.org/bmvc/2010/">BMVC</a> 2010.<p></p>
 
 <p class="paperheading">
 A Multi-Stage Linear Approach to Structure from Motion 
@@ -296,7 +296,7 @@ Sudipta Sinha and Marc Pollefeys<br>
 Piecewise Planar Stereo for Image-based Rendering
 [<a href="pdfs/SinhaICCV2009.pdf">pdf</a>]</p>
 Sudipta Sinha, Drew Steedly and Rick Szeliski<br>
-<a href="www.cvpapers.com/iccv2009.html">ICCV</a> 2009.<p></p>
+<a href="http://www.cvpapers.com/iccv2009.html">ICCV</a> 2009.<p></p>
 
 
 
@@ -344,13 +344,13 @@ Towards Urban 3D Reconstruction from Video
 [<a href="pdfs/Akbar3DV2006.pdf">pdf</a>]</p>
 A. Akbarzadeh, J.-M. Frahm, P. Mordohai, B. Clipp, C. Engels, D. Gallup, P. Merrell, M. Phelps,<br> 
 S. Sinha, B. Talton,  L. Wang, Q. Yang, H. Stewenius, R. Yang, G. Welch, H. Towles, D. Nister and M. Pollefeys<br>
-<a href="www.cs.unc.edu/Events/Conferences/3DPVT06/">3DPVT</a> 2006.<p></p>
+<a href="http://www.cs.unc.edu/Events/Conferences/3DPVT06/">3DPVT</a> 2006.<p></p>
 
 <p class="paperheading">
 Visual Hull Construction in the Presence of Partial Occlusion
 [<a href="pdfs/Guan3DPVT2006.pdf">pdf</a>]</p>
 Li Guan, Sudipta Sinha, Jean-Sebastien Franco and Marc Pollefeys<br>
-<a href="www.cs.unc.edu/Events/Conferences/3DPVT06/">3DPVT</a> 2006.<p></p>
+<a href="http://www.cs.unc.edu/Events/Conferences/3DPVT06/">3DPVT</a> 2006.<p></p>
 
 <p class="paperheading">
 GPU-based Video Feature Tracking And Matching
@@ -379,7 +379,7 @@ Sudipta Sinha and Marc Pollefeys<br>
 Calibrating a network of cameras from live or archived video
 [<a href="pdfs/SinhaACIVS2004.pdf">pdf</a>]</p>
 Sudipta Sinha and Marc Pollefeys<br>
-<a href="acivs.org/acivs2004/">ACIVS</a> 2004.<p></p>
+<a href="http://acivs.org/acivs2004/">ACIVS</a> 2004.<p></p>
 
 <p class="paperheading">
 Visual-hull reconstruction from uncalibrated and unsynchronized video streams
@@ -403,13 +403,13 @@ Sudipta Sinha, Marc Pollefeys and Leonard McMillan<br>
 Towards calibrating a pan-tilt-zoom camera network
 [<a href="pdfs/SinhaOMNI2004.pdf">pdf</a>]</p>
 Sudipta Sinha and Marc Pollefeys<br>
-<a href="cmp.felk.cvut.cz/~svoboda/Omnivis2004/">ECCV workshop</a> on Omnidirectional Vision and Camera Networks, 2004.<p></p>
+<a href="http://cmp.felk.cvut.cz/~svoboda/Omnivis2004/">ECCV workshop</a> on Omnidirectional Vision and Camera Networks, 2004.<p></p>
 
 <p class="paperheading">
 Iso-disparity Surfaces for General Stereo Configurations
 [<a href="pdfs/PollefeysECCV2004.pdf">pdf</a>]</p>
 Marc Pollefeys and Sudipta Sinha<br>
-<a href="cmp.felk.cvut.cz/eccv2004/">ECCV</a> 2004.<p></p>
+<a href="http://cmp.felk.cvut.cz/eccv2004/">ECCV</a> 2004.<p></p>
 
 
 
