updates to research projects, added talk, advising info

--- a/Research.html
+++ b/Research.html
@@ -53,6 +53,24 @@ We propose a single-shot approach for simultaneously detecting an object in an R
 
 <tr class="spaceUnder">
 <td style="width: 20%">
+<img alt="" src="img/ICCV2017.jpg" width="150"></td>
+<td style="width: 80%">			
+<span class="textStyle">
+<strong>
+Submodular Trajectory Optimization for Aerial 3D Scanning</strong><br>
+<a href="http://iccv2017.thecvf.com/">ICCV 2017</a><br>
+<font size = 2>
+Drones equipped with cameras are emerging as a powerful tool for large-scale aerial 3D scanning, but existing automatic flight planners do not exploit all available information about the scene, and can therefore produce inaccurate and incomplete 3D models. We present an automatic method to generate drone trajectories, such that the imagery acquired during the flight will later produce a high-fidelity 3D model. Our method uses a coarse estimate of the scene geometry to plan camera trajectories that: (1) cover the scene as thoroughly as possible; (2) encourage observations of scene geometry from a diverse set of viewing angles; (3) avoid obstacles; and (4) respect a user-specified flight time budget <a href = "http://graphics.stanford.edu/papers/aerial_scanning/">...</a>
+</font><br>
+<a href="pdfs/RobertsICCV2017.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="http://graphics.stanford.edu/papers/aerial_scanning/"><img src="img/www.jpg" width="24"></a><br>
+</span>
+</td>
+</tr>
+
+
+
+<tr class="spaceUnder">
+<td style="width: 20%">
 <img alt="" src="img/CVPR2017.jpg" width="150"></td>
 <td style="width: 80%">			
 <span class="textStyle">
