--- a/Others.html
+++ b/Others.html
@@ -51,7 +51,7 @@
 
 <p class="paperheading">Talks
 <ul>
-<!--<li>Talk TBD,<br>Invited talk, University of Illinois, Urbana Champaign, February 2018.</li> -->
+<li>Efficient and Accurate 3D Scene Reconstruction and Object Pose Prediction,<br>Invited talk, University of Illinois, Urbana Champaign, May 2018.</li>
 <li>Dense correspondence recovery involving images and 3D models,<br>Invited talk, University of Utah, February 2018.</li>
 <li>FarmBeats: AI and IoT for Agriculture (with R. Chandra),<br><a href="http://events.cornell.edu/event/farmbeats_ai_iot_for_agriculture_computational_sustainability_virtual_seminar_series">Computational Sustainability Virtual Seminar</a>, February 2018.</li>
 <li>Flexible priors for robust dense stereo matching,<br><a href="https://seis.bristol.ac.uk/~csadc/LPM17/">International Workshop on Lines, Planes and Manhattan Models for 3-D Mapping (LPM 2017)</a>,<br>IROS workshop, September 2017.</li>
