--- a/Activities.html
+++ b/Activities.html
@@ -71,7 +71,7 @@
 
 <p class="paperheading">Ph.D. Committee Member
 <ul>
-<li>Joseph Degol, University of Illinois at Urbana Champaign.</li>
+<li>Joseph DeGol, University of Illinois at Urbana Champaign.</li>
 <li>Jing Dong, Georgia Tech.</li>
 <li>Bugra Tekin, EPFL.</li>
 </ul>
