--- a/Publications.html
+++ b/Publications.html
@@ -39,7 +39,7 @@
 <hr>
 
 <br>
-<h2 id = "papers">Sudipta Sinha - Papers</h2>
+<h2 id = "papers">Papers</h2>
 <a href="https://scholar.google.com/citations?user=Z6gnDIEAAAAJ&hl=en&oi=ao"><font size = 4>[Google Scholar Page]</font></a>
 
 <br><br>
@@ -47,12 +47,23 @@
 
 <!-- ---------------------------------------------------------- -->
 <h3>2018</h3>
+<p class="paperheading">
+Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching
+[pdf] </p>
+Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys<br>
+<a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
+
+<p class="paperheading">
+Learn-to-Score: Efficient 3D Scene Exploration by Predicting View Utility
+[pdf] </p>
+Benjamin Hepp, Debadeepta Dey, Sudipta N. Sinha, Ashish Kapoor, Neel Joshi, O Hilliges<br>
+<a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
 
 <p class="paperheading">
 Real-Time Seamless Single Shot 6D Object Pose Prediction
 [<a href="pdfs/TekinCVPR2018.pdf">pdf</a>] </p>
 Bugra Tekin, Sudipta N. Sinha and Pascal Fua<br>
-<a href="http://cvpr2018.thecvf.com/">CVPR</a>, 2018 (to appear)<br> <p></p>
+<a href="http://cvpr2018.thecvf.com/">CVPR</a>, 2018<br> <p></p>
 
 
 <!-- ---------------------------------------------------------- -->
@@ -443,7 +454,7 @@ Soumyadeep Paul, Sudipta N. Sinha and Amitabha Mukerjee<br>
 
 
 <!-- ---------------------------------------------------------- -->
-<h2 id = "techreports">Sudipta Sinha - Tech Reports</h2>
+<h2 id = "techreports">Tech Reports</h2>
 
 <p class="paperheading">
 Car Make and Model Recognition using 3D Curve Alignment 
@@ -472,7 +483,7 @@ Research survey paper, UNC Chapel Hill, December, 2004.<br> <p></p>
 <br><br>
 
 <!-- ---------------------------------------------------------- -->
-<h2 id="bookchapters">Sudipta Sinha - Book Chapters</h2>
+<h2 id="bookchapters">Book Chapters</h2>
 
 <p class="paperheading">
 A Memory Efficient Discriminative Approach for Location-Aided Recognition
@@ -508,7 +519,7 @@ Computational Vision in Neural and Machine Systems, L. Harris and M. Jenkins (Ed
 <br><br>
 
 <!-- ---------------------------------------------------------- -->
-<h2 id = "patents">Sudipta Sinha - Patents</h2>
+<h2 id = "patents">Patents</h2>
 
 <p class="paperheading">
 IoT Gateway For Weakly Connected Settings
