--- a/Others.html
+++ b/Others.html
@@ -41,7 +41,7 @@
 
 <p class="paperheading">Teaching 
 <ul> 
-<li>3rd Summer School on Computer Vision<a href="http://cvit.iiit.ac.in/cvsummerschool2018/index.html">Basics OF Modern AI</a></li>
+<li>3rd Summer School on Computer Vision<a href="http://cvit.iiit.ac.in/cvsummerschool2018/index.html">, Basics OF Modern AI</a>, IIIT Hyderabad, July 2-7, 2018.</li>
 <li>IROS 2017 Tutorial: Computer Vision on Microsoft HoloLens</li>
 <li>IROS 2017 Tutorial: Computer Vision on Microsoft HoloLens</li>
 <li>CVPR 2017 Tutorial: Computer Vision on Microsoft HoloLens</li>
