--- a/Publications.html
+++ b/Publications.html
@@ -49,13 +49,13 @@
 <h3>2018</h3>
 <p class="paperheading">
 Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching
-[pdf] </p>
+[pdf coming soon] </p>
 Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys<br>
 <a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
 
 <p class="paperheading">
 Learn-to-Score: Efficient 3D Scene Exploration by Predicting View Utility
-[pdf] </p>
+[pdf coming soon] </p>
 Benjamin Hepp, Debadeepta Dey, Sudipta N. Sinha, Ashish Kapoor, Neel Joshi, O Hilliges<br>
 <a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
 
