update code url

--- a/Publications.html
+++ b/Publications.html
@@ -62,7 +62,8 @@ Benjamin Hepp, Debadeepta Dey, Sudipta N. Sinha, Ashish Kapoor, Neel Joshi, O Hi
 
 <p class="paperheading">
 Real-Time Seamless Single Shot 6D Object Pose Prediction
-[<a href="pdfs/TekinCVPR2018.pdf">pdf</a>] </p>
+[<a href="pdfs/TekinCVPR2018.pdf">pdf</a>] 
+[<a href="https://github.com/Microsoft/singleshotpose">code</a>]</p>
 Bugra Tekin, Sudipta N. Sinha and Pascal Fua<br>
 <a href="http://cvpr2018.thecvf.com/">CVPR</a>, 2018<br> <p></p>
 
