--- a/Research.html
+++ b/Research.html
@@ -46,7 +46,7 @@ Real-Time Seamless Single Shot 6D Object Pose Prediction</strong><br>
 <font size = 2>
 We propose a single-shot approach for simultaneously detecting an object in an RGB image and predicting its 6D pose without requiring multiple stages or having to examine multiple hypotheses. Unlike a recently proposed single-shot technique for this task (Kehl et al. ICCV'17) that only predicts an approximate 6D pose that must then be refined, ours is accurate enough not to require additional post-processing <a href = "proj/SSS6DObjectPose/index.html">...</a>
 </font><br>
-<a href="pdfs/TekinCVPR2018.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="proj/SSS6DObjectPose/index.html"><img src="img/www.jpg" width="24"></a><br>
+<a href="pdfs/TekinCVPR2018.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://github.com/Microsoft/singleshotpose"><img src="img/www.jpg" width="24"></a><br>
 </span>
 </td>
 </tr>
