--- a/Publications.html
+++ b/Publications.html
@@ -50,13 +50,13 @@
 <h3>2018</h3>
 <p class="paperheading">
 Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching
-[pdf coming soon] </p>
+[<a href="https://demuc.de/papers/schoenberger2018sgm.pdf">pdf</a>]</p>
 Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys<br>
 <a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
 
 <p class="paperheading">
 Learn-to-Score: Efficient 3D Scene Exploration by Predicting View Utility
-[pdf coming soon] </p>
+[<a href="https://arxiv.org/abs/1806.10354v1">pdf</a>]</p>
 Benjamin Hepp, Debadeepta Dey, Sudipta N. Sinha, Ashish Kapoor, Neel Joshi, O Hilliges<br>
 <a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
 
