--- a/Publications.html
+++ b/Publications.html
@@ -49,8 +49,9 @@
 <!-- ---------------------------------------------------------- -->
 <h3>2018</h3>
 <p class="paperheading">
-Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching
-[<a href="https://demuc.de/papers/schoenberger2018sgm.pdf">pdf</a>]</p>
+Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching<br>
+[<a href="https://demuc.de/papers/schoenberger2018sgm.pdf">pdf</a>]
+[<a href="https://demuc.de/papers/schoenberger2018sgm_supp.pdf">supplementary</a>]</p>
 Johannes L. Schönberger, Sudipta N. Sinha, Marc Pollefeys<br>
 <a href="https://eccv2018.org/">ECCV</a>, 2018 (to appear)<br> <p></p>
 
