--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head>
+<title>Sudipta N. Sinha</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="ja" http-equiv="Content-Language">
-
 <link href="./css/index.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style1 {
 	text-align: center;
 }
 </style>
-<title>Homepage of Sudipta N. Sinha</title>
 </head>
 
 <body>
