3dv paper added

--- a/Publications.html
+++ b/Publications.html
@@ -48,6 +48,13 @@
 
 <!-- ---------------------------------------------------------- -->
 <h3>2018</h3>
+
+<p class="paperheading">
+Learning to Align Images using Weak Geometric Supervision<br>
+[<a href="https://arxiv.org/pdf/1808.01424.pdf">pdf</a>]</p>
+ Jing Dong, Byron Boots, Frank Dellaert, Ranveer Chandra and Sudipta N. Sinha<br>
+<a href="http://3dv18.uniud.it/">3DV</a>, 2018 (to appear)<br> <p></p>
+
 <p class="paperheading">
 Learning to Fuse Proposals from Multiple Scanline Optimizations in Semi-Global Matching<br>
 [<a href="https://demuc.de/papers/schoenberger2018sgm.pdf">pdf</a>]
