--- a/Publications.html
+++ b/Publications.html
@@ -50,7 +50,7 @@
 <h3>2018</h3>
 
 <p class="paperheading">
-Learning to Align Images using Weak Geometric Supervision<br>
+Learning to Align Images using Weak Geometric Supervision
 [<a href="https://arxiv.org/pdf/1808.01424.pdf">pdf</a>]</p>
  Jing Dong, Byron Boots, Frank Dellaert, Ranveer Chandra and Sudipta N. Sinha<br>
 <a href="http://3dv18.uniud.it/">3DV</a>, 2018 (to appear)<br> <p></p>
