new patents added.

--- a/Publications.html
+++ b/Publications.html
@@ -532,6 +532,18 @@ Computational Vision in Neural and Machine Systems, L. Harris and M. Jenkins (Ed
 <h2 id = "patents">Patents</h2>
 
 <p class="paperheading">
+Aerial imaging of a region using above ground aerial camera platform 
+[<a href="https://patents.justia.com/patent/20180213187">20180213187</a>] </p>
+Ranveer Chandra, Manohar Swaminathan, Vasuki Narasimha Swamy, Zerina Kapetanovic, Deepak Vasisht, Akshit Kumar, Apurv Mehra, Avikalp Gupta, Sudipta Sinha, Rohit Patil<br>
+Publication, July 26, 2018<br> <p></p>
+
+<p class="paperheading">
+Low-cost, Long-term Aerial Imagery 
+[<a href="https://patents.justia.com/patent/20180213186">20180213186</a>] </p>
+Ranveer Chandra, Manohar Swaminathan, Vasuki Narasimha Swamy, Zerina Kapetanovic, Deepak Vasisht, Akshit Kumar, Anirudh Badam, Gireeja Ranade, Sudipta Sinha, Rohit Patil<br>
+Publication, July 26, 2018<br> <p></p>
+
+<p class="paperheading">
 IoT Gateway For Weakly Connected Settings
 [<a href="https://patents.justia.com/patent/20180069933">20180069933</a>] </p>
 Ranveer Chandra, Ashish Kapoor, Sudipta Sinha, Amar Phanishayee, Deepak Vasisht, Xinxin Jin, Madhusudhan Gumbalapura Sudarshan<br>
