--- a/Others.html
+++ b/Others.html
@@ -68,8 +68,6 @@
 
 <li>IROS 2017 Tutorial: Computer Vision on Microsoft HoloLens</li>
 
-<li>IROS 2017 Tutorial: Computer Vision on Microsoft HoloLens</li>
-
 <li>CVPR 2017 Tutorial: Computer Vision on Microsoft HoloLens</li>
 
 <li>CVPR 2017 Tutorial: Geometric and Semantic 3D Reconstruction</li>
@@ -107,6 +105,8 @@
 <p class="paperheading">Talks
 
 <ul>
+
+<li>Recent Progress in Stereo, Scene Flow and Object Pose Prediction,<br>Invited talk, Georgia Tech, August 2018.</li>
 
 <li>Efficient and Accurate 3D Scene Reconstruction and Object Pose Prediction,<br>Invited talk, University of Illinois, Urbana Champaign, May 2018.</li>
 
