--- a/Publications.html
+++ b/Publications.html
@@ -532,6 +532,12 @@ Computational Vision in Neural and Machine Systems, L. Harris and M. Jenkins (Ed
 <h2 id = "patents">Patents</h2>
 
 <p class="paperheading">
+Scene reconstruction from bursts of image data 
+[<a href="https://patents.justia.com/patent/20180225836">20180225836</a>] </p>
+Neel Joshi, Sudipta Sinha, Minh P. Vo<br>
+Publication, August 9, 2018<br> <p></p>
+
+<p class="paperheading">
 Aerial imaging of a region using above ground aerial camera platform 
 [<a href="https://patents.justia.com/patent/20180213187">20180213187</a>] </p>
 Ranveer Chandra, Manohar Swaminathan, Vasuki Narasimha Swamy, Zerina Kapetanovic, Deepak Vasisht, Akshit Kumar, Apurv Mehra, Avikalp Gupta, Sudipta Sinha, Rohit Patil<br>
