updated cvpr2017 paper page and main page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<span class="textStyle"><a href="resume/snsinhaCV.pdf">CV</a></span><br>
 			<span class="textStyle"><a href="http://dblp.uni-trier.de/pers/hd/s/Sinha:Sudipta_N=">DBLP</a></span><br>
 			<span class="textStyle"><a href="https://www.linkedin.com/in/sudipsin">LinkedIn</a></span><br>
+			<span class="textStyle"><a href="https://www.researchgate.net/profile/Sudipta_Sinha8">ResearchGate</a></span><br>
 			<span class="textStyle"><a href="https://scholar.google.com/citations?user=Z6gnDIEAAAAJ&hl=en&oi=ao">Google Scholar</a></span><br>
 			<span class="textStyle"><a href="https://www.microsoft.com/en-us/research/people/sudipsin/">Microsoft Research page</a></span><br>
 			<span class="textStyle">Email: sudipta-dot-sinha-at-microsoft.com</span><br>			
@@ -58,7 +59,7 @@
 
 <div id="footer-box">
 <hr>
-Last updated: April 19, 2018
+Last updated: November 4, 2018
 </div>
 
 </body></html>
