--- a/proj/UAVTrajRecon/index.html
+++ b/proj/UAVTrajRecon/index.html
@@ -23,7 +23,7 @@
 <!--
 -->
 &nbsp;
-<iframe width="560" height="315" src="//www.youtube.com/embed/X8ai8tRGeNs" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="//www.youtube.com/embed/udZdh0VsxvM" frameborder="0" allowfullscreen></iframe>
 &nbsp;
 </td>
 </tr>
@@ -53,51 +53,10 @@ of our method.
 <tr>
 <td colspan=2>
 <span style="font-weight: bold;"><font size=5>Dataset download</font><br>&nbsp;<br></span>
-<b>About the dataset</b><br><br>
-This dataset contains image sequences, AHRS data, ground truth bounding box annotations (GTBB) of a person observed from the camera onboard the MAV.<br>
-We provide the following sequences used in the evaluation reported in the paper.
-<br><br>
-<font face="courier">
-mfly-o6 &nbsp; &nbsp; &nbsp; [<a href="mfly-o6.zip">download</a>]<br>
-mfly-o7  &nbsp; &nbsp; &nbsp; [<a href="mfly-o7.zip">download</a>]<br>
-mfly-o8  &nbsp; &nbsp; &nbsp; [<a href="mfly-o8.zip">download</a>]<br>
-mfly-o9 &nbsp; &nbsp; &nbsp; [<a href="mfly-o9.zip">download</a>]<br>
-walk-i4 &nbsp; &nbsp; &nbsp; [<a href="walk-i4.zip">download</a>]<br>
-walk-i5 &nbsp; &nbsp; &nbsp; [<a href="walk-i5.zip">download</a>]<br>
-walk-o1  &nbsp; &nbsp; &nbsp; [<a href="walk-o1.zip">download</a>]<br>
-walk-o2 &nbsp; &nbsp; &nbsp; [<a href="walk-o2.zip">download</a>]<br>
-walk-o3 &nbsp; &nbsp; &nbsp; [<a href="walk-o3.zip">download</a>]<br>
-</font>
-<br>
-<b>File format</b><br><br>
-Each directory contains the following files.
-<br><br>
-<font face="courier">
-gtbb.txt <br>
-imu.txt<br>
-[frame_number].png<br>
-</font>
-<br>
-<b>Ground truth bounding box annotations</b><br><br>
-Each line of the gtbb.txt file stores the 2d bounding box position -- [left, top, width, height] for each frame. Here is an example.
-<br><br>
-<font face="courier">
-252,203,56,137<br>
-</font>
-<br>
-This indicates that the top-left corner of the bounding box is at pixel (252,203) and the width and height of the bounding box is 56 and 137 pixels respectively.
-The line number indicates the frame number.
-<br><br>
-<b>IMU information</b><br>
-<br>
-Each line of the imu.txt file contains the following information.
-<br><br>
-<font face="courier">
-[frame number] , [time of frame captured / millisecond] , [time of IMU captured / millisecond], [roll / degree], [pitch / degree], [yaw / degree]
-</font>
-<br><br>
-The frame number is directly associated in one-to-one fashion with the image files.
-</td>
+
+Coming Soon!</td>
+
+
 </tr>
 </tbody>
 </table>
