updated links to cvpr2017 paper

--- a/Research.html
+++ b/Research.html
@@ -98,7 +98,7 @@ Flight Dynamics-based Recovery of a UAV Trajectory using<br>Ground Cameras</stro
 
 We propose a new method to estimate the 6-dof trajectory of a flying object such as a quadrotor UAV within a 3D airspace monitored using multiple fixed ground cameras. It is based on a new structure from motion formulation for the 3D reconstruction of a single moving point with known motion dynamics. Our main contribution is a new bundle adjustment procedure which in addition to optimizing the camera poses, regularizes the point trajectory using a prior based on motion dynamics (or specifically flight dynamics) <a href = "">...</a>
 </font><br>
-<a href="pdfs/RozantsevCVPR2017.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="p"><img src="img/www.jpg" width="24"></a>&nbsp;<a href="p"><img src="img/yt.jpg" width="24"></a><br>
+<a href="pdfs/RozantsevCVPR2017.pdf"><img src="img/pdf.jpg" width="24"></a>&nbsp;<a href="https://snsinha.github.io/proj/UAVTrajRecon/index.html"><img src="img/www.jpg" width="24"></a>&nbsp;<a href="https://www.youtube.com/watch?v=udZdh0VsxvM"><img src="img/yt.jpg" width="24"></a><br>
 </span>
 </td>
 </tr>
